--- a/css/main.css
+++ b/css/main.css
@@ -7,7 +7,7 @@
     box-sizing: border-box;
 }
 
-form, section, #select, button {
+form, section, #select, button, #botonesPaginacion div {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -21,6 +21,8 @@ form, #select {
 }
 input, button, select {
     padding: 10px;
+    font-size: 2vw;
+    align-content: center;
 }
 article, div img{
     width: 100%;
@@ -39,6 +41,13 @@ article p:first-of-type{
     font-style: italic;
 }
 
+#numeroPag {
+    font-size: 5vw;
+    padding: 10px;
+}
+#botonesPaginacion div {
+    padding: 10px;
+}
 /*//////////////////////////////////////////////
                         768
 ///////////////////////////////////////////////*/
@@ -51,7 +60,7 @@ article p:first-of-type{
      }
      input, button, select {
         padding: 15px;
-        font-size: medium;
+        font-size: 3vw;
     }
     h3 {
         font-size: 2.1rem;   
@@ -70,7 +79,13 @@ article p:first-of-type{
         padding: 20px;
         width: 40vw;
     }
-   
+    #numeroPag {
+        font-size: 5.5vw;
+        padding: 10px;
+    }
+    #botonesPaginacion div {
+        padding: 10px;
+    }
     
 }
 /*//////////////////////////////////////////////
@@ -86,7 +101,7 @@ article p:first-of-type{
      }
      input, button, select {
         padding: 15px 20px;
-        font-size: large;
+        font-size: 4vw;
     }
     h3 {
         font-size: 2.5rem;   
